// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateNavigationConfig test standard config + additional content 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "path": "/test/npm-package/add",
        "text": "Add",
        "type": "md",
      },
      Object {
        "path": "/test/npm-package/file",
        "text": "File",
        "type": "js",
      },
      Object {
        "path": "/test/npm-package/file-outside",
        "text": "File Outside",
        "type": "md",
      },
    ],
    "path": "/test",
    "text": "Test",
  },
]
`;

exports[`generateNavigationConfig test standard config + additional content 2`] = `
Object {
  "/": "/test/npm-package/add",
  "/test": "/test/npm-package/add",
}
`;

exports[`generateNavigationConfig test standard config + additional content 3`] = `
Object {
  "/test/npm-package/add": Object {
    "text": "Add",
    "type": "md",
  },
  "/test/npm-package/file": Object {
    "text": "File",
    "type": "js",
  },
  "/test/npm-package/file-outside": Object {
    "text": "File Outside",
    "type": "md",
  },
}
`;

exports[`generateNavigationConfig tests additionalSearchDirectories 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "path": "/test/npm-package/file",
        "text": "File",
        "type": "js",
      },
      Object {
        "path": "/test/npm-package/file-outside",
        "text": "File Outside",
        "type": "md",
      },
    ],
    "path": "/test",
    "text": "Test",
  },
]
`;

exports[`generateNavigationConfig tests additionalSearchDirectories 2`] = `
Object {
  "/": "/test/npm-package/file",
  "/test": "/test/npm-package/file",
}
`;

exports[`generateNavigationConfig tests additionalSearchDirectories 3`] = `
Object {
  "/test/npm-package/file": Object {
    "text": "File",
    "type": "js",
  },
  "/test/npm-package/file-outside": Object {
    "text": "File Outside",
    "type": "md",
  },
}
`;

exports[`generateNavigationConfig tests multiple primary nav items 1`] = `
Array [
  Object {
    "pageConfig": Object {
      "path": "/test/npm-package/file",
      "text": "File",
      "type": "js",
    },
    "path": "/test",
    "text": "Test",
  },
  Object {
    "pageConfig": Object {
      "path": "/doc/npm-package/file",
      "text": "File",
      "type": "js",
    },
    "path": "/doc",
    "text": "Doc",
  },
]
`;

exports[`generateNavigationConfig tests multiple primary nav items 2`] = `
Object {
  "/": "/test/npm-package/file",
  "/doc": "/doc/npm-package/file",
  "/test": "/test/npm-package/file",
}
`;

exports[`generateNavigationConfig tests multiple primary nav items 3`] = `
Object {
  "/doc/npm-package/file": Object {
    "text": "File",
    "type": "js",
  },
  "/test/npm-package/file": Object {
    "text": "File",
    "type": "js",
  },
}
`;

exports[`generateNavigationConfig tests prod mode 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "path": "/test/npm-package/file",
        "text": "File",
        "type": "js",
      },
      Object {
        "path": "/test/npm-package/file-outside",
        "text": "File Outside",
        "type": "md",
      },
    ],
    "path": "/test",
    "text": "Test",
  },
]
`;

exports[`generateNavigationConfig tests prod mode 2`] = `
Object {
  "/": "/test/npm-package/file",
  "/test": "/test/npm-package/file",
}
`;

exports[`generateNavigationConfig tests prod mode 3`] = `
Object {
  "/test/npm-package/file": Object {
    "text": "File",
    "type": "js",
  },
  "/test/npm-package/file-outside": Object {
    "text": "File Outside",
    "type": "md",
  },
}
`;

exports[`generateNavigationConfig tests sorting 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "path": "/test/npm-package/first-file",
        "text": "First File",
        "type": "js",
      },
      Object {
        "path": "/test/npm-package/second-file",
        "text": "Second File",
        "type": "js",
      },
      Object {
        "children": Array [
          Object {
            "path": "/test/npm-package/dir/file",
            "text": "File",
            "type": "js",
          },
        ],
        "text": "Dir",
      },
      Object {
        "path": "/test/npm-package/a",
        "text": "A",
        "type": "js",
      },
      Object {
        "children": Array [
          Object {
            "path": "/test/npm-package/b/file",
            "text": "File",
            "type": "js",
          },
        ],
        "text": "B",
      },
    ],
    "path": "/test",
    "text": "Test",
  },
]
`;

exports[`generateNavigationConfig tests sorting 2`] = `
Object {
  "/": "/test/npm-package/first-file",
  "/test": "/test/npm-package/first-file",
}
`;

exports[`generateNavigationConfig tests sorting 3`] = `
Object {
  "/test/npm-package/a": Object {
    "text": "A",
    "type": "js",
  },
  "/test/npm-package/b/file": Object {
    "text": "File",
    "type": "js",
  },
  "/test/npm-package/dir/file": Object {
    "text": "File",
    "type": "js",
  },
  "/test/npm-package/first-file": Object {
    "text": "First File",
    "type": "js",
  },
  "/test/npm-package/second-file": Object {
    "text": "Second File",
    "type": "js",
  },
}
`;
